gcc/testsuite/g++.old-deja/g++.mike/p2793.C
// { dg-do assemble  }
// prms-id: 2793

void f(char&) {			// { dg-message "" } referenced by error below
  f('c');			// { dg-error "" } 
}
